src/frontend/ast/snapshots/shlang__frontend__ast__parser_test__empty_anon_class_literal.snap
---
source: src/frontend/ast/parser_test.rs
description: test_parsing
expression: "parse_expr (_test_func! (\"class {}\"))"
---
Ok(
    Ast {
        node: ClassLit {
            name: None,
            fields: {},
            methods: {},
        }[6:8],
        ident_pool: IdentArray {
            0: "input",
            1: "println",
            2: "str_len",
            3: "parse_str",
        },
        file_id: FileId(Anon),
    },
)
