src/frontend/ast/snapshots/shlang__frontend__ast__parser_test__empty_call.snap
---
source: src/frontend/ast/parser_test.rs
description: test_parsing
expression: "parse_expr (_test_func! (\"a();\"))"
---
Ok(
    Ast {
        node: Call {
            callee: Var(IdentId(3))[0:1],
            args: [],
        }[2:3],
        ident_pool: IdentArray {
            0: "println",
            1: "input",
            2: "str_len",
            3: "a",
        },
    },
)
