src/frontend/ast/snapshots/shlang__frontend__ast__parser_test__empty_class_literal.snap
---
source: src/frontend/ast/parser_test.rs
description: test_parsing
expression: "parse_expr (_test_func! (\"class foo {}\"))"
---
Ok(
    Ast {
        node: ClassLit {
            name: Some(
                IdentId(4)[6:9],
            ),
            fields: {},
            methods: {},
        }[10:12],
        ident_pool: IdentArray {
            0: "input",
            1: "println",
            2: "str_len",
            3: "parse_str",
            4: "foo",
        },
        file_id: FileId(Anon),
    },
)
