src/frontend/ast/snapshots/shlang__frontend__ast__parser_test__func_decl_expr.snap
---
source: src/frontend/ast/parser_test.rs
description: "Test: func_decl_expr\n──────────────────────────────────────────────────────────────────────────────────\nfunc a(b){\n\t1\n}"
expression: parse_expr (& source)
info: test_parser_functions
---
Ok(
    Program {
        ident_pool: IdentArray {
            0: "input",
            1: "println",
            2: "str_len",
            3: "parse_str",
            4: "a",
            5: "b",
        },
        file_id: FileId(Anon),
    } = Decl(global readonly)::IdentId(4) = Function(IdentId(5)){
        Result(
            Int(1),
        )[12:13],
    }[5:10][5:10],
)
