src/frontend/ast/snapshots/shlang__frontend__ast__parser_test__func_expr.snap
---
source: src/frontend/ast/parser_test.rs
description: "Test: func_expr\n──────────────────────────────────────────────────────────────────────────────────\nfunc(b){\n\t1\n}"
expression: parse_expr (& source)
info: test_parser_functions
---
Ok(
    Program {
        ident_pool: IdentArray {
            0: "input",
            1: "println",
            2: "str_len",
            3: "parse_str",
            4: "b",
        },
        file_id: FileId(Anon),
    } = Function(IdentId(4)){
        Result(
            Int(1),
        )[10:11],
    }[0:13],
)
