src/frontend/ast/snapshots/shlang__frontend__ast__parser_test__if else expression.snap
---
source: src/frontend/ast/parser_test.rs
description: "Test: if else expression\n──────────────────────────────────────────────────────────────────────────────────\nif false {\n    \"hello\"\n} else {\n    \"bye\"\n}"
expression: parse_expr (& source)
info: test_parser_block_expressions
---
Ok(
    Program {
        ident_pool: IdentArray {
            0: "input",
            1: "println",
            2: "str_len",
            3: "parse_str",
        },
        file_id: FileId(Anon),
    } = Branch {
        condition: false[3:8],
        if_block: [
            Result(
                "hello",
            )[15:22],
        ][9:24],
        else_block: Some(
            [
                Result(
                    "bye",
                )[36:41],
            ][30:43],
        ),
    }[3:10],
)
