src/frontend/ast/snapshots/shlang__frontend__ast__parser_test__index_assign.snap
---
source: src/frontend/ast/parser_test.rs
description: test_parsing
expression: "parse_expr (_test_func! (\"a[1] = 10\"))"
---
Ok(
    Assign(Index {
        target: Var(IdentId(3))[0,1],
        index: Int(1)[2,3],
    }[1,4] = Int(10)[7,9])[1,9],
)
