src/frontend/ast/snapshots/shlang__frontend__ast__parser_test__index_with_call.snap
---
source: src/frontend/ast/parser_test.rs
description: test_parsing
expression: "parse_expr (\"a[1]()[2]\")"
---
Ok(
    Index {
        target: Call {
            callee: Index {
                target: Var(a)[0,1],
                index: Int(1)[2,3],
            }[2,4],
            args: [],
        }[5,6],
        index: Int(2)[7,8],
    }[7,9],
)
