src/frontend/ast/snapshots/shlang__frontend__ast__parser_test__list_literal.snap
---
source: src/frontend/ast/parser_test.rs
description: "Test: list_literal\n──────────────────────────────────────────────────────────────────────────────────\n[1,2,3]"
expression: parse_expr (& source)
info: test_parser_structs
---
Ok(
    Program {
        ident_pool: IdentArray {
            0: "input",
            1: "println",
            2: "str_len",
            3: "parse_str",
        },
        file_id: FileId(Anon),
    } = List{
        Int(1)[1:2],
        Int(2)[3:4],
        Int(3)[5:6],
    }[0:7],
)
